2204-07-01 Simon Floery <chimaira@users.sf.net>
	* updated pt_BR.po

2004-06-19 Simon Floery <chimaira@users.sf.net>
	* src/general_functions.c: check for NULL pointers in 
		formula_entry_is_active. fixes sf.net #971328.
		(thanks to michal)
	* added polish translation. sf.net #971335 (thanks to michal)

########################################
# 2003-05-23 galculator 1.2.3 released #
########################################

2004-05-23 Simon Floery <chimaira@users.sf.net>
	* src/callback.c: CON and MR buttons push display value all the time
		(thanks to christian)
	* src/calc_basic.c: '=' closes now all open brackets
	
2004-05-22 Simon Floery <chimaira@users.sf.net>
	* ui/main_frame.glade: fixed "destroy" signal bug (thanks to andrew)
	* galculator.desktop.in: updates (thanks to dag)
	* src/ui.c, src/callbacks.c: disable MR and M+ button until there is 
		sth to display (thanks to christian)

2004-04-19 Simon Floery <chimaira@users.sf.net>
	* updated ja.po and pt_BR.po

########################################
# 2003-04-01 galculator 1.2.2 released #
########################################

2004-04-01 Simon Floery <chimaira@users.sf.net>
	* bugfix: inv, hyp button in form mode release (thanks to christian)
	* bugfix: rolldn, swapxy start new entry now (thanks to christian)
	* 0e+ -> 1e+ shortcut
	* bugfix: angle units in formula entry mode (thanks to andrew)
	* bugfix: add -> sum tooltip for translations (thanks to takeshi)
	* updated ja.po, de.po

########################################
# 2003-03-20 galculator 1.2.1 released #
########################################

2004-03-20 Simon Floery <chimaira@users.sf.net>
	* enable nested calls of flex_parser
	* fixed default user defined functions
	* error handling for flex_parser calls

2004-03-19 Simon Floery <chimaira@users.sf.net>
	* calc_basic.c: ALG_OBJECT

2004-03-17 Simon Floery <chimaira@users.sf.net>
	* implemented parser with flex
	* modified build process for flex
	* parser part - user defined functions
