@@ -1,2 +1,3 @@
 maik schreiber for his work on gtk accessibility, bug reports and feature requests.
 Christian "naddy" Weisgerber for his helpful feedback and bug reports.
+to all you translators
